...
@Preview(showBackground = true)
@Composable
fun TicketComponentPreview() {
  OnePassTheme {
    Column(modifier = Modifier.background(colorScheme.background).padding(16.dp)) {
      TicketComponent(
          title = "Lausanne Party",
          status = TicketStatus.CURRENTLY,
          dateTime = "Dec 15, 2024 • 9:00 PM",
          location = "Lausanne, Flon")
      Spacer(modifier = Modifier.height(16.dp))
      TicketComponent(
          title = "Morges Party",
          status = TicketStatus.UPCOMING,
          dateTime = "Dec 15, 2024 • 9:00 PM",
          location = "Morges")
    }
  }
}
...
